# nobodywho

./: flake.nix
nobodywho/: Cargo.toml  shell.nix
nobodywho/core/src/: chat.rs  llm.rs
nobodywho/flutter/nobodywho/: pubspec.yaml
nobodywho/flutter/nobodywho/example/: README.md  pubspec.yaml
nobodywho/flutter/nobodywho/example/lib/: main.dart
nobodywho/flutter/nobodywho/example/test/: widget_test.dart
nobodywho/flutter/nobodywho/example/web/: index.html  manifest.json
nobodywho/flutter/nobodywho/example/web/models/: .gitignore
nobodywho/flutter/nobodywho/example/web/pkg/: .gitignore
nobodywho/flutter/nobodywho/test/: load_model_web.dart
nobodywho/flutter/nobodywho/tool/: prepare_web_assets.sh  resolve_binary.dart
nobodywho/flutter/nobodywho/web/pkg/: .gitignore  nobodywho_flutter.js  nobodywho_flutter.shim.js  shim-test.html
nobodywho/flutter/rust/: BUILDING-WEB.md  Cargo.toml  build.rs
nobodywho/flutter/rust/src/: main.rs
